# apkhound

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: speed_test.rs
src/: callgraph.rs  compare.rs  lib.rs  main.rs  manifest_summary.rs  matching.rs  utils.rs
src/commands/: callgraph.rs  compare.rs  extract.rs  manifest.rs  match_cmd.rs  mod.rs  permissions.rs
tests/: integration_test.rs
