[package]
name = "apkhound"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.6.1", features=["derive"]}
rayon = "1.12.0"
regex = "1.13.0"
roxmltree = "0.21.1"
rustc-hash = "1.1"
serde = {version="1", features=["derive"]}
serde_json = "1"
serde_yaml = "0.9"
smali = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
