[package]
name = "apkhound"
version = "0.3.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
debug = true 

[[bench]]
name = "speed_test"
harness = false

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"]}

[dependencies]
clap = {version="4.6.1", features=["derive"]}
rayon = "1.12.0"
regex = "1.13.0"
roxmltree = "0.21.1"
rustc-hash = "2.1"
serde = {version="1", features=["derive"]}
serde_json = "1"
serde_yaml = "0.9"
smali = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
